# HTOS

./: .env  .gitignore  .gitmodules  README.md  TUTORIAL.md  app.py  blacklist.conf  bot.py  main.py  pyproject.toml  requirements.txt
app_core/: __init__.py  convert.py  createsave.py  decrypt.py  encrypt.py  exceptions.py  helpers.py  models.py  profile_selector.py  quickcodes.py  reregion.py  resign.py  setting_selector.py  sfo_editor.py
cogs/: change.py  convert.py  createsave.py  decrypt.py  encrypt.py  extra.py  misc.py  quick.py  reregion.py  resign.py  sealed_key.py  sfo.py
data/: __init__.py  convert_helper.py  crypto_functions.py
data/cheats/: __init__.py  common.py  exceptions.py  gtav_cheats.py  quickcodes.py  rdr2_cheats.py
data/converter/: __init__.py  bl3_converter.py  common.py  exceptions.py  rstar_converter.py  xeno2_converter.py
data/crypto/: __init__.py  alieniso_crypt.py  balatro_crypt.py  bl3_crypt.py  bo_crypt.py  ccr_crypt.py  common.py  deadrising_crypt.py  di2_crypt.py  diablo3_crypt.py  digimon_crypt.py  dl2_crypt.py  dl_crypt.py  doa5lr_crypt.py  dsr_crypt.py  dstranding_crypt.py  exceptions.py  fc5_crypt.py  ff7cc_crypt.py  ffpixel_crypt.py  (+37 more)
docs/: SETUP.md  USAGE.md
google_drive/: __init__.py  exceptions.py  gd_functions.py
network/: __init__.py  exceptions.py  ftp_functions.py  socket_functions.py
tools/: crypt.py
utils/: __init__.py  constants.py  conversions.py  embeds.py  embeds_assert.py  exceptions.py  extras.py  helpers.py  instance_lock.py  namespaces.py  orbis.py  type_helpers.py  workspace.py  zip_archive.py
(+8 files in other folders)
